--- a/make/photon/prepare/templates/clair/clair_env.jinja
+++ b/make/photon/prepare/templates/clair/clair_env.jinja
@@ -1,3 +1,3 @@
-http_proxy={{http_proxy}}
-https_proxy={{https_proxy}}
-no_proxy={{no_proxy}}
+http_proxy={{clair_http_proxy}}
+https_proxy={{clair_https_proxy}}
+no_proxy={{clair_no_proxy}}
